//
//  SignInView.swift
//  WSEISchedule
//
//  Created by Maksymilian Galas on 03/10/2019.
//  Copyright © 2019 Infinity Pi Ltd. All rights reserved.
//

import SwiftUI

struct SignInView: View {

    // MARK: - Properties

    @ObservedObject var viewModel: SignInViewModel

    // MARK: - Views

    var body: some View {
        VStack(spacing: 20) {
            Spacer()

            Image.logo
                .resizable()
                .aspectRatio(contentMode: .fit)
                .frame(maxHeight: 200)
                .onTapGesture(count: 5, perform: developerMode)

            Spacer()
            
            Text(.signIn(.title))
                .font(.title)
                .fontWeight(.bold)
                .lineLimit(nil)
                .multilineTextAlignment(.center)
                .fixedSize(horizontal: false, vertical: true)

            Text(.signIn(.privacyMessage))
                .font(.footnote)
                .lineLimit(nil)
                .multilineTextAlignment(.center)
                .fixedSize(horizontal: false, vertical: true)

            Spacer()
            
            Button(action: signIn) {
                Text(.signIn(.signIn))
                    .font(.headline)
                    .padding(16)
                    .frame(maxWidth: .infinity)
                    .background(Color.main)
                    .cornerRadius(16)
                    .foregroundColor(.white)
            }
            .buttonStyle(.borderless)
            .accessibilityIdentifier("SignInButton")
        }
        .frame(maxWidth: 500)
        .padding(26)
        .animation(.default)
    }

    // MARK: - Methods

    private func signIn() {
        viewModel.signIn()
    }

    private func developerMode() {
        viewModel.developerMode()
    }

}

// MARK: -

struct SignInView_Previews: PreviewProvider {
    static var previews: some View {
        SignInView(viewModel: SignInViewModel())
    }
}
