...
                    Image.refresh
                }
            }
            #endif
            ToolbarItem(placement: .navigationBarTrailing) {
                if #available(iOS 16.0, *) {
                    NavigationLink(value: "ScheduleHistory") {
                        Image.scheduleHistory
                    }
                    .navigationDestination(for: String.self) { _ in
                        ScheduleHistoryView(lectureWeeks: viewModel.previousLectureWeeks)
                    }
                    .accessibilityIdentifier("ScheduleHistory")
...
