...
                        Image.signOut
                            .foregroundColor(.red)
                        Text(.signIn(.signOut))
                            .foregroundColor(.main)
                    }
                }
                .accessibilityIdentifier("SignOutButton")
            }
        }
        .alert(isPresented: $viewModel.showThankYouAlert) {
            Alert(
                title: Text(.settings(.thankYouAlertTitle)),
                message: Text(.settings(.thankYouAlertMessage)),
...
