...
                    }

                    SettingsViewContent(viewModel: viewModel.settingsViewModel, isSignedIn: $viewModel.isSignedIn)
                }
                .listStyle(.insetGrouped)
                .navigationTitle(.other(.wseiSchedule))
                .accessibilityIdentifier("Sidebar")
            } detail: {
                switch viewModel.selectedListItem {
                case .grades:
                    gradesView
                default:
                    scheduleView
...
